# gtfs_builder

./: .env-example  .gitignore  .gtfs.env.example  .gtfs_builder.env  .gtfs_builder.example.env  Dockerfile  README.md  app.py  data2mongodb.py  data_json_export.py  db_run.py  environment-dev.yml  environment.yml  inputs_attrs.json  inputs_attrs_default.json  main.py  params.json  pyproject.toml  requirements.txt
.github/workflows/: main.yml
data/: readme.txt
gtfs_builder/: main.py  push_db.py
gtfs_builder/app/: config.py  core.py  global_values.py  helpers.py  routes.py  routes_from_db.py  routes_from_files.py  session.py
gtfs_builder/core/: core.py  optim_helper.py
gtfs_builder/db/: __init__.py  base.py  moving_points.py  stops.py  stops_times.py  stops_times_ter.py  stops_times_toulouse.py
gtfs_builder/gtfs_app/: core.py  main.py  routes.py
gtfs_builder/gtfs_core/: core.py  data_helper.py  optim_helper.py
gtfs_builder/gtfs_cp_inputs/: agency_in.py  calendar_dates_in.py  calendar_in.py  frequencies_in.py  routes_in.py  shapes_in.py  stop_times_in.py  stops_in.py  trips_in.py
gtfs_builder/gtfs_db/: __init__.py  base.py  stops.py  stops_times.py
gtfs_builder/gtfs_main/: agency_in.py  calendar_dates_in.py  calendar_in.py  frequencies_in.py  routes_in.py  shapes_in.py  stops_in.py  trips_in.py
gtfs_builder/inputs_builders/: agency_in.py  calendar_dates_in.py  (+7 more)
input_data/: inputs_attrs.json
tests/: .gtfs.env  conftest.py  test_data_build.py  test_data_db_build.py  test_data_files_build.py  test_data_sp_build.py  test_routes.py  test_routes_from_db.py  test_routes_from_files.py  test_workflow.py
(+6 files in other folders)
