[tool.poetry]
name = "gtfs_builder"
version = "0.6.0"
description = ""
authors = ["amauryval <amauryval@gmail.com>"]
license = ""
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11"
geospatial_lib = "0.32.0"
starlite = "1.48.0"
uvicorn = "0.20.0"
gunicorn = "20.1.0"
spatialpandas = "0.4.5"
python-dotenv = "0.21.0"


[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
pytest-cov = "4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
